# test_task_mkk_luna

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 1e9b2b7d8d79_add_extension_postgis.py  471be9f6e1d1_add_sample_data_for_organizations_.py  6ffac3014940_switch_coordinates_to_geometry_point_.py  8da74957ed16_initial_migration.py
app/: main.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  activities.py  buildings.py  organization_activities.py  organizations.py  phones.py
app/repositories/: activity_repo.py  building_repo.py  organization_repo.py
app/routes/: activities.py  buildings.py  dependencies.py  organizations.py
app/schemas/: requests.py  responses.py
app/services/: activity_service.py  building_service.py  organization_service.py
app/utils/: lg.py  logging_utils.py
tests/: conftest.py  test_health.py
tests/activities/: test_get_activity_by_id.py  test_get_all_activities.py
tests/buildings/: test_get_all_buildings.py  test_get_building_by_id.py
tests/organizations/: test_get_organization_by_id.py  test_get_organizations_by_activity.py  test_get_organizations_by_building_id.py  test_search_organizations_by_location.py  test_search_organizations_by_name.py
